# gryphon

./: .editorconfig  .gitattributes  .gitignore  .lgtm.yml  CMakeLists.txt  CMakeLists.txt.html  INSTALL.md  README.md  lgtm.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUILD_ISSUE.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md  installation_issue.md
.github/workflows/: build.yml  codeql.yml  linux-build.yml  macos-build.yml  windows-build.yml
cmake/: CXXWarnings.cmake  CxxWarnings.cmake
docs/: DRAFT.txt  conf.py  gdt-type-specification.rst  ggl-specification.rst  gss-specification.rst
docs/_build/doctrees/: environment.pickle  gdt-specification.doctree  gdt-type-specification.doctree  ggl-specification.doctree  ggl-tags-specification.doctree  index.doctree
docs/_build/html/: .buildinfo  gdt-specification.html  gdt-type-specification.html  genindex.html  ggl-specification.html  ggl-tags-specification.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: gdt-specification.rst.txt  ggl-tags-specification.rst.txt  index.rst.txt
examples/: This100.ggl  This100.gss  data.gdt
src/: CMakeLists.txt  gryphon.h
src/Data/: data.h  gdata.h  parseGDT.cpp  parseGdt.cpp  parse_gdt.cpp  roll.cpp  roll.h
src/Export/: export.h  exportBmp.cpp  export_bmp.cpp
src/Graph/: raster.cpp
src/Layout/: layout.h  parseGGL.cpp  parseGgl.cpp  parse_ggl.cpp
src/Main/: main.cpp
src/Parser/: endian.cpp  endian.h  parser.cpp  parser.h  trimEnds.cpp  trimEnds.h  trim_ends.cpp  trim_ends.h
src/Plot/: composeGPLT.cpp  composeGplt.cpp  compose_gplt.cpp  plot.h
src/Raster/: raster.cpp
src/Template/: composeGTML.cpp  composeGTMLT.cpp  composeGtml.cpp  compose_gtml.cpp  dom.cpp  dom.h  element.cpp  element.h  gtemplate.cpp  gtemplate.h  gtml.h  parseGTML.cpp  parseGtml.cpp  parse_ggl.cpp  parse_gtml.cpp  parser.cpp  parser.h  template.cpp  template.h  tree.cpp  tree.h  trim_ends.cpp  trim_ends.h
